# DeepRecall

./: .gitignore  pyproject.toml
.roo/: mcp.json
docker/: .env.example  docker-compose.yml  milvus.yml
resources/: master.docx
src/deeprecall/datagen/: task.py
src/deeprecall/embed_rag/: task.py
src/deeprecall/rag/embed/: task.py  tasks.py
src/deeprecall/rag/extract/: task.py
src/deeprecall/services/: celery_app.py  celery_worker.py  helper.py  rest_api.py
src/deeprecall/services/providers/: embeding.py  llm.py  vectorstore.py
